fixed horizontal scroll on landing page

--- a/components/ui/Landing.module.css
+++ b/components/ui/Landing.module.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   color: #064420;
+  padding: 1.1rem;
 }
 
 .showcase__button {
