--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,8 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
   font-family: "Poppins", sans-serif;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
